# fastapi-mongodb-template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
api/: main.py
api/core/: config.py  database.py  exceptions.py  security.py
api/src/: models.py  shared.py  utils.py
api/src/auth/: auth0.py
api/src/memberships/: routes.py  service.py  types.py
api/src/orgs/: routes.py  service.py  types.py
api/src/user_orgs/: routes.py  service.py  types.py
api/src/users/: routes.py  service.py  types.py
